# alphaHiASM

./: .editorconfig  .gitignore  .gitmodules  Bioinformatics.sln  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  README.md  ToyAssembly.sln  assembly.cpp  assembly.h  main.cpp  makefile  overlap.cpp  overlap.h  utility.cpp  utility.h
Bioinformatics/: Bioinformatics.vcxproj  assembler.hpp  assembly.cpp  assembly.h  main.cpp  main.h  overlap.cpp  overlap.h  proccess.cpp  proccess.h  process.cpp  utility.cpp
